fixing questions alignment, and learn more link

--- a/client/src/components/LandingPage/Styles/FreeTrialWelcome.css
+++ b/client/src/components/LandingPage/Styles/FreeTrialWelcome.css
@@ -57,7 +57,6 @@ button.ui.green.button.buildYourRoadmap {
 }
 
 a.learnMoreLink {
-  display: block;
   font-family: Cabin;
   font-size: 14px;
   font-weight: 500;
